samples/_failures_safe/1761513307_46287f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eff43fbb.c: In function ‘main’:
./samples/SAFE/__tmp_eff43fbb.c:200:9: error: expected expression at end of input
  200 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_eff43fbb.c:200:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eff43fbb.c:200:9: error: expected declaration or statement at end of input
